@@ -1,3 +1,6 @@
+2015/09/29:
+Added [has_default_reduction] to the incremental API.
+
 2015/09/25:
 Modified the meaning of --canonical to allow default reductions to take
 place. There implies no loss of precision in terms of lookahead sets,
